<resources>
    <string name="app_name">MovieAppMVVM</string>
    <string name="hello_blank_fragment">i am blank</string>
    <string name="movieapp">MovieApp</string>
    <string name="ui_login">UI Login</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="VerificationDialog">Please, Verify your account using your email</string>
    <string name="search_button">Search Button</string>
    <string name="movies">Movies</string>
    <string name="upcoming">Upcoming</string>
    <string name="view_all">View All</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="movie_image">Movie Image</string>
    <string name="description">Description</string>
    <string name="genres">Genres</string>
    <string name="cast">Cast</string>
    <string name="actor_name">Actor Name</string>
    <string name="bio">Bio</string>
    <string name="birthday">Birthday</string>
    <string name="known_for">Known for</string>
    <string name="no_connection">No internet connection.</string>
    <string name="unexpected_error">Unexpected error occurred.</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>