<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.moviedetailsFragment.MovieDetailsFragment"
    android:background="#343a40">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/details_banner_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:backgroundTint="#000000"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/button_bookmark"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabPlayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/orange"
                android:src="@drawable/ic_baseline_play_circle_filled_24"
                app:layout_constraintBottom_toBottomOf="@id/details_banner_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_banner_image" />

            <View
                android:id="@+id/center_divide"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:cardElevation="0dp"
                app:layout_constraintCircleRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_banner_image">

                <ImageView
                    android:id="@+id/imagePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_image"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_movie_name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/orange"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_card"
                app:layout_constraintTop_toBottomOf="@id/fabPlayButton"
                tools:ignore="SpUsage"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/text_rating"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:drawablePadding="6dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="8.5/10"
                android:textColor="@color/orange"
                android:textSize="16dp"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                app:layout_constraintStart_toEndOf="@id/image_card"
                app:layout_constraintTop_toBottomOf="@id/text_movie_name"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text_length"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:drawablePadding="6dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="153 minutes"
                android:textColor="@color/orange"
                android:textSize="16dp"
                app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
                app:layout_constraintStart_toEndOf="@id/image_card"
                app:layout_constraintTop_toBottomOf="@id/text_rating"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text_release_date"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:drawablePadding="6dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="10 July 2022"
                android:textColor="@color/orange"
                android:textSize="16dp"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintStart_toEndOf="@id/image_card"
                app:layout_constraintTop_toBottomOf="@id/text_length"
                tools:ignore="SpUsage" />


            <TextView
                android:id="@+id/heading_description"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/description"
                android:textColor="@color/orange"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_card"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text_description"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:text="@string/description"
                android:textColor="@color/orange"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_description"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text_genres"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:text="@string/genres"
                android:textColor="@color/orange"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_description"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/heading_cast"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/cast"
                android:textColor="@color/orange"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_genres"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_cast"
                tools:listitem="@layout/item_cast" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_cast">

                <LinearLayout
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:src="@color/sunsetFlower"
                        android:layout_width="60dp"
                        android:layout_height="68dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="LIKE"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:src="@color/sunsetFlower"
                        android:layout_width="60dp"
                        android:layout_height="68dp"
                        android:layout_marginTop="10dp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="FAVORITE"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:src="@color/sunsetFlower"
                        android:layout_width="60dp"
                        android:layout_height="68dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="COMMENT"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>